--- a/jseval.html
+++ b/jseval.html
@@ -1,10 +1,24 @@
 <!doctype html>
 <html>
 <head>
+  <style>
+    body{font-family:arial;}
+    body textarea{color:white;background:black;}
+  </style>
 <title>html5 examples and tests</title>
 <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
 </head>
 <body>
+  <table class="bodytable">
+    <tr>
+      <td>
+        Input: <br/><textarea id="ta_in"></textarea>
+      </td>
+      <td>
+        
+      </td>
+    </tr>
+  </table>
 </body>
 </html>
