--- a/jseval.html
+++ b/jseval.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     body{font-family:arial;}
-    body textarea{color:white;background:black;}
+    body textarea{color:white;background:black;width:45%;height:600px;}
   </style>
 <title>html5 examples and tests</title>
 <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
