--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
 </head>
 <body>
+  <a href="image-capture.html">image-capture</a>
 </body>
 </html>
