--- a/image-capture.html
+++ b/image-capture.html
@@ -5,7 +5,10 @@
 <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
 <script>
-jQuery(document).ready(function(){});
+
+// jQuery(function(){});
+
+
 </script>
 </head>
 <body>
