--- a/image-capture.html
+++ b/image-capture.html
@@ -16,7 +16,7 @@
 <div class="bodydiv2"></div>
 <div class="bodydiv3"></div>
 <script>
-document.querySelector('.bodydiv1').innerHTML=String.valueOf((new Date()).getTime());
+document.querySelector('.bodydiv1').innerHTML=''+((new Date()).getTime());
 </script>
 </body>
 </html>
