--- a/image-capture.html
+++ b/image-capture.html
@@ -6,7 +6,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
 <script>
 
-// jQuery(function(){});
+jQuery(function($){$('.bodydiv2').html(''+(new Date()).getTime());});
 
 
 </script>
