--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
 </head>
 <body>
-  <a href="image-capture.html">image-capture</a>
+  <a href="image-capture.html" target="_blank">image-capture</a>
+  <br/>
+  <a href="js-page-timing.html" target="_blank">js-page-timing</a>
+  <br/>
 </body>
 </html>
