--- a/image-capture.html
+++ b/image-capture.html
@@ -22,7 +22,7 @@ jQuery(function($){
         window.fr = new FileReader();
         window.fr.readAsArrayBuffer(f1);
     </textarea>
-    <button class="button1" onclick="eval(document.querySelector('.button1click').value)" 
+    <button class="button1" onclick="eval(document.querySelector('.button1click').value)" >eval</button>
   </form>
 </div>
 <div class="bodydiv2"></div>
