--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <br/>
   <a href="js-page-timing.html" target="_blank">js-page-timing</a>
   <br/>
+  <a href="addrow.html" target="_blank">addrow</a>
+  <br/>
 </body>
 </html>
