--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -34,16 +34,13 @@
 </script>
 </head>
 <body>
-  <table class="bodytable">
-    <tr>
-      <td>
-Input: <br><textarea id="ta_in" style="margin: 0px; width: 717px; height: 530px;"></textarea>
-</td>
-<td>
-Output (id="ta_out"): <br><textarea id="ta_out" style="margin: 0px; width: 735px; height: 537px;"></textarea>
-      </td>
-    </tr>
-    <tr><td><button type="button" onclick="eval(jQuery('#ta_in').val());">eval(jQuery('#ta_in').val())</button></td><td></td></tr>
-  </table>
+  <div class="bodydiv"></div>
+  
+  <script>
+    jQuery(document).ready(function($){
+      
+    });
+    
+  </script>
 </body>
 </html>
