--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -4,6 +4,7 @@
   <style>
     body{font-family:arial;}
     body textarea{color:white;background:black;width:45%;height:200px;}
+    textarea, input, button, div{border-radius:12pt;font-family:courier new;border:1px solid #de4;}
   </style>
 <title>html5 examples and tests</title>
 <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
