--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -5,6 +5,7 @@
     body{font-family:arial;}
     body textarea{color:white;background:black;width:45%;height:200px;}
     textarea, input, button, div{border-radius:12pt;font-family:courier new;border:1px solid #de4;}
+    .formdiv div{background:rgba(255,255,255,0.5);}
   </style>
 <title>html5 examples and tests</title>
 <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
@@ -39,7 +40,7 @@
   
   <script>
     jQuery(document).ready(function($){
-      
+      $('.bodydiv').html(getUrlFromParameters(getParameters()));
     });
     
   </script>
