--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -40,7 +40,7 @@
   
   <script>
     jQuery(document).ready(function($){
-      $('.bodydiv').html(getUrlFromParameters(getParameters()));
+      $('.bodydiv').html(getUrlFromParameters(getGetParameters()));
     });
     
   </script>
