--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -4,7 +4,8 @@
   <style>
     body{font-family:arial;}
     body textarea{color:white;background:black;width:45%;height:200px;}
-    textarea, input, button, div, label{display:inline-block;border-radius:12pt;font-family:courier new;border:1px solid #de4;border:1em 1em 1em 1em;padding:1em 1em 1em 1em;}
+    textarea, input, button, div, label{border-radius:12pt;font-family:courier new;border:1px solid #de4;border:1em 1em 1em 1em;padding:1em 1em 1em 1em;}
+    .bodydiv div{background:pink;}
     .formdiv div{background:rgba(255,255,255,0.5);}
   </style>
 <title>html5 examples and tests</title>
