--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -5,7 +5,7 @@
     body{font-family:arial;}
     body textarea{color:white;background:black;width:45%;height:200px;}
     textarea, input, button, div, label{border-radius:12pt;font-family:courier new;border:1px solid #de4;border:1em 1em 1em 1em;padding:1em 1em 1em 1em;}
-    body .bodydiv div,body .bodydiv textarea{background:pink;height:2em !important;}
+    body .bodydiv div,body .bodydiv textarea{background:pink;height:20px !important;}
     .formdiv div{background:rgba(255,255,255,0.5);}
     
   </style>
