--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -7,9 +7,12 @@
     textarea, input, button, div, label{border-radius:12pt;font-family:courier new;border:1px solid #de4;border:1em 1em 1em 1em;padding:1em 1em 1em 1em;}
     body .bodydiv label, body .bodydiv div,body .bodydiv textarea
     {
-      background:rgba(200,150,100,0.5);height:20px !important;
+      display:inline-block;
+      background:rgba(200,150,100,0.5);
+      height:20px !important;
       flex-direction: column;
       vertical-align:top;
+      
     }
     .formdiv div{background:rgba(255,255,255,0.5);}
     
