--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -7,7 +7,7 @@
     textarea, input, button, div, label{border-radius:12pt;font-family:courier new;border:1px solid #de4;border:1em 1em 1em 1em;padding:1em 1em 1em 1em;}
     body .bodydiv label, body .bodydiv div,body .bodydiv textarea
     {
-      display:inline-block;
+      display:block;
       background:rgba(200,150,100,0.5);
       height:20px !important;
       flex-direction: column;
