--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -8,10 +8,10 @@
     body .bodydiv label, body .bodydiv div,body .bodydiv textarea
     {
       display:block;
-      background:rgba(200,150,100,0.5);
+      background:rgba(250,220,050,0.5);
       height:20px !important;
       vertical-align:top;
-      flex-direction: column;
+      flex-direction: row;
       
     }
     .formdiv div{background:rgba(255,255,255,0.5);}
