--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -4,10 +4,18 @@
   <style>
     body{font-family:arial;}
     body textarea{color:white;background:black;width:45%;height:200px;}
-    textarea, input, button, div, label{border-radius:12pt;font-family:courier new;border:1px solid #de4;border:1em 1em 1em 1em;padding:1em 1em 1em 1em;}
+    textarea, input, button, div, label
+    {
+      border-radius:12px 12px 12px 12px;
+      font-family:courier new;
+      border:3px solid pink;
+      border:1em 1em 1em 1em;
+      padding:1em 1em 1em 1em;
+      
+    }
     body .bodydiv label, body .bodydiv div,body .bodydiv textarea
     {
-      display:block;
+      display:inline-block;
       background:rgba(250,220,050,0.5);
       height:20px !important;
       vertical-align:top;
