--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -9,7 +9,7 @@
     }
     body .bodydiv label, body .bodydiv div,body .bodydiv textarea
     {
-      display:inline-block;
+      display:block;
       background:rgba(250,220,050,0.5);
       height:20px !important;
       vertical-align:top;
@@ -17,8 +17,8 @@
       border-radius:12px 12px 12px 12px;
       font-family:courier new;
       border:3px solid pink;
-      border:1em 1em 1em 1em;
-      padding:1em 1em 1em 1em;
+      border:1em 1em 1em 1em !important;
+      padding:1em 1em 1em 1em !important;
       
       flex-direction: row;
       
