--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -4,9 +4,6 @@
   <style>
     body{font-family:arial;}
     body textarea{color:white;background:black;width:45%;height:200px;}
-    textarea, input, button, div, label
-    {
-    }
     body .bodydiv .subbodydiv label, body .bodydiv  .subbodydiv div,body .bodydiv  .subbodydiv textarea
     {
       display:block;
@@ -23,7 +20,7 @@
       flex-direction: row;
       
     }
-    .formdiv div{background:rgba(255,255,255,0.5);}
+   body .bodydiv .subbodydiv{background:rgba(255,255,255,0.5);}
     
   </style>
 <title>html5 examples and tests</title>
