--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -20,7 +20,8 @@
       flex-direction: row;
       
     }
-   body .bodydiv .subbodydiv{background:rgba(5,175,195,0.5);
+   body .bodydiv .subbodydiv>*{
+     background:rgba(5,175,195,0.85) !important;
      
      border:.51em .51em .51em .51em !important;
       padding:.51em .51em .51em .51em !important;
