--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -3,8 +3,7 @@
 <head>
   <style>
     body{font-family:arial;}
-    body textarea{color:white;background:black;width:45%;height:200px;}
-    body .bodydiv .subbodydiv label, body .bodydiv  .subbodydiv div,body .bodydiv  .subbodydiv textarea
+    body .bodydiv .subbodydiv>*
     {
       display:block;
       background:rgba(250,220,050,0.5);
