--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     body{font-family:arial;}
-    body .bodydiv .subbodydiv>*
+    body .bodydiv .subbodydiv label, body .bodydiv .subbodydiv textarea, body .bodydiv .subbodydiv div
     {
       display:block;
       background:rgba(250,220,050,0.5);
