--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -19,7 +19,7 @@
       flex-direction: row;
       
     }
-   body .bodydiv .subbodydiv>*{
+   body .bodydiv .subbodydiv{
      background:rgba(5,175,195,0.85) !important;
      
      border:.51em .51em .51em .51em !important;
