--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -22,10 +22,14 @@
    body .bodydiv .subbodydiv{
      background:rgba(5,175,195,0.85) !important;
      
+   
+  border:3px solid rgba(100,100,100,.6);
+  border:1em 1em 1em 1em !important;
+  padding:1em 1em 1em 1em !important;
      border:.51em .51em .51em .51em !important;
       padding:.51em .51em .51em .51em !important;
-   }
-    
+   
+   }   
   </style>
 <title>html5 examples and tests</title>
 <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
