--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -13,7 +13,7 @@
       border-radius:12px 12px 12px 12px;
       font-family:courier new;
       border:3px solid pink;
-      border:1em 1em 1em 1em !important;
+      margin:1em 1em 1em 1em !important;
       padding:1em 1em 1em 1em !important;
       
       flex-direction: row;
@@ -22,11 +22,9 @@
    body .bodydiv .subbodydiv{
      
    
-  border:3px solid rgba(200,200,200,.6);
-  border:1em 1em 1em 1em !important;
+  border:3px solid rgba(200,200,200,.6) !important;
+  margin:1em 1em 1em 1em !important;
   padding:1em 1em 1em 1em !important;
-     border:.51em .51em .51em .51em !important;
-      padding:.51em .51em .51em .51em !important;
    
    }   
   </style>
