--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -53,7 +53,7 @@
         rtn += '<div class="subbodydiv"><label for="'+n+'">'+n+'</label><br/>&nbsp;<br/>';
         rtn += '<textarea name="'+n+'" id="'+n+'">'+v+'</textarea></div>';
       } 
-      rtn += "<br/>&nbsp;<br/><input type="submit" value="add row"/></form>";
+      rtn += '<br/>&nbsp;<br/><input type="submit" value="add row"/></form>';
       
     }
     
