--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -8,7 +8,7 @@
       display:block;
       background:rgba(250,220,050,0.5);
       height:20px !important;
-      width:90%;
+      width: calc(100% - 4em);
       vertical-align:top;
       
       border-radius:12px 12px 12px 12px;
