--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -6,13 +6,14 @@
     body .bodydiv .subbodydiv label, body .bodydiv .subbodydiv textarea, body .bodydiv .subbodydiv div
     {
       display:block;
-      background:rgba(250,220,050,0.5);
-      height:20px !important;
+      background:rgba(150,020,050,0.25);
+      height:15px !important;
       width: calc(100% - 4em);
       vertical-align:top;
       
       border-radius:12px 12px 12px 12px;
       font-family:courier new;
+      font-size:13px;
       border:3px solid pink;
       margin:.1em .1em .1em .1em !important;
       padding:.1em .1em .1em .1em !important;
@@ -23,7 +24,7 @@
    body .bodydiv .subbodydiv{
      
    
-  border:3px solid rgba(100,200,200,.6) !important;
+  border:3px solid rgba(100,200,200,.26) !important;
   margin:.1em .1em .1em .1em !important;
   padding:.1em .1em .1em .1em !important;
    
