--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -24,10 +24,10 @@
    body .bodydiv .subbodydiv{
      
    
-  border:3px solid rgba(100,200,200,.26) !important;
+  border:3px solid rgba(000,200,200,.26) !important;
   margin:.1em .1em .1em .1em !important;
   padding:.1em .1em .1em .1em !important;
-   
+  height:32px;
    }   
   </style>
 <title>html5 examples and tests</title>
