--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -14,11 +14,11 @@
       border-radius:12px 12px 12px 12px;
       font-family:courier new;
       font-size:13px;
-      border:3px solid pink;
+      border:1px solid silver;
       margin:.1em .1em .1em .1em !important;
       padding:.1em .1em .1em .1em !important;
       
-      flex-direction: row;
+      /*flex-direction: row;*/
       
     }
    body .bodydiv .subbodydiv{
