--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -22,7 +22,7 @@
       
     }
    body .bodydiv .subbodydiv{
-     
+     display:block;
    
   border:3px solid rgba(000,200,200,.26) !important;
   margin:.1em .1em .1em .1em !important;
