--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -51,7 +51,7 @@
         var n = JSON.parse(decodeURIComponent(pn2))[i];
         //var n2 = decodeURIComponent(n);
         var v = '';
-        rtn += '<div class="subbodydiv"><label for="'+n+'">'+n+'</label><br/>&nbsp;<br/>';
+        rtn += '<div class="subbodydiv"><label for="'+n+'">'+n+'</label>';
         rtn += '<textarea name="'+n+'" id="'+n+'">'+v+'</textarea></div>';
       } 
       rtn += '<br/>&nbsp;<br/><input type="submit" value="add row"/></form>';
