--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -27,7 +27,8 @@
   border:3px solid rgba(000,200,200,.46) !important;
   margin:.1em .1em .1em .1em !important;
   padding:.1em .1em .1em .1em !important;
-  height:62px !important;
+  height:82px !important;
+  background:#def !important;
    }   
   </style>
 <title>html5 examples and tests</title>
