--- a/dynamicForm.html
+++ b/dynamicForm.html
@@ -55,7 +55,7 @@
         rtn += '<div class="subbodydiv"><label for="'+n+'">'+n+'</label>';
         rtn += '<textarea name="'+n+'" id="'+n+'">'+v+'</textarea></div>';
       } 
-      rtn += '<br/>&nbsp;<br/><input type="submit" value="add row"/></form>';
+      rtn += '<br/>&nbsp;<br/><input type="submit" value="add row"/><input  type="reset" value="reset"/></form>';
       
     }
     
