--- a/jseval.html
+++ b/jseval.html
@@ -15,7 +15,7 @@
       <td>
 Input: <br><textarea id="ta_in" style="margin: 0px; width: 717px; height: 530px;"></textarea>
 </td>
-<td>
+<td class="tdOut">
 Output (id="ta_out"): <br><textarea id="ta_out" style="margin: 0px; width: 735px; height: 537px;"></textarea>
       </td>
     </tr>
