--- a/jseval.html
+++ b/jseval.html
@@ -13,7 +13,7 @@
   <table class="bodytable">
     <tr>
       <td>
-Input: <br><textarea id="ta_in" style="margin: 0px; width: 717px; height: 530px;"></textarea>
+Input: <br><textarea id="ta_in" style="margin: 0px; width: 717px; height: 530px;">jQuery("#ta_out").val(jQuery("&lt;div/&gt;").text("a s d f, 1 &lt; 2").html())</textarea>
 </td>
 <td class="tdOut">
 Output (id="ta_out"): <br><textarea id="ta_out" style="margin: 0px; width: 735px; height: 537px;"></textarea>
